libqt6c/src/libqstringconverter_base.hpp

#pragma once
#ifndef SRCC_LIBQSTRINGCONVERTER_BASE_HPP
#define SRCC_LIBQSTRINGCONVERTER_BASE_HPP

#include <stdbool.h>
#include <stddef.h>

#pragma GCC diagnostic ignored "-Wdeprecated-declarations"

#include "qtlibc.h"

#ifdef __cplusplus
extern "C" {
#endif

#ifdef __cplusplus
#else
typedef struct QByteArrayView QByteArrayView;
typedef struct QStringConverter QStringConverter;
#endif

bool QStringConverter_IsValid(const QStringConverter* self);
void QStringConverter_ResetState(QStringConverter* self);
bool QStringConverter_HasError(const QStringConverter* self);
const char* QStringConverter_Name(const QStringConverter* self);
int QStringConverter_EncodingForName(const char* name);
const char* QStringConverter_NameForEncoding(int e);
int QStringConverter_EncodingForData(libqt_string data);
int QStringConverter_EncodingForHtml(libqt_string data);

#ifdef __cplusplus
} /* extern C */
#endif

#endif